--- a/GoodPT/templates/accounts/privacyPolicy.html
+++ b/GoodPT/templates/accounts/privacyPolicy.html
@@ -8,7 +8,7 @@
 	    <link rel="stylesheet" href="/tpl/001/css/reset.css">
 	    <link rel="stylesheet" href="/tpl/001/css/font.css">
 	    <link rel="stylesheet" href="/tpl/001/css/style.css?v1">
-	    <link rel="stylesheet" href="/css/edutrack.css">
+	    <link rel="stylesheet" href="/accounts/css/edutrack.css">
 		<script type="text/JavaScript" src="/app/js/Context.js"></script>
 		<script type="text/javascript">
 			var localeKey = "ko"; // javascript용 localeKey 전역 변수 설정
