--- a/GoodPT/templates/board/question_detail.html
+++ b/GoodPT/templates/board/question_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 {% load board_filter %}
 {% block content %}
-<div class="container my-3" id="question_detail" style="margin-top: 30px">
+<div class="container my-3" id="question_detail">
     <!-- message 표시 -->
     {% if messages %}
         {% for message in messages %}
