--- a/GoodPT/templates/base.html
+++ b/GoodPT/templates/base.html
@@ -32,7 +32,7 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83"id="main_nav">
+      <nav class="navbar navbar-expand-lg navbar-light py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83"id="main_nav">
         <div class="container"><a class="navbar-brand" href="/"><img src="{% static '/img/logo/main_logo.png' %}" height="35" alt="..." /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
