개인정보처리방침 css제거
안쓰는 css 정리

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -103,7 +103,7 @@
                         </div>
             <div class="bottom blur fixed">
             
-            <button id = "privacy-accept-button" class="btn-primary">Accept</button>
+            <button id = "privacy-accept-button" class="btn-primary">동의하기</button>
             </div>
     
        
