--- a/GoodPT/static/report.css
+++ b/GoodPT/static/report.css
@@ -15,7 +15,8 @@ body {
 }
 .report-container{
     background : white;
-	padding : 2%;
+	padding-left : 2%;
+	padding-right : 2%;
 	margin-top: 50px;
 }
 .wrapper{
