--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -71,7 +71,9 @@
       <!-- <section> begin ============================-->
       <div>
         {% if messages %}
-        {% endif %} {% block content %} {% endblock %}
+        {% endif %}
+        {% block content %}
+        {% endblock %}
       </div>
 
       <!-- ============================================-->
