--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -25,6 +25,26 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
     <!-- ===============================================-->
+    <style>
+      #btn-back-to-top {
+        bottom: 20px;
+        right: 30px;
+        z-index: 9999;
+        border: none;
+        outline: none;
+        background-color: #555;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 10px;
+        display:scroll;
+        position:fixed;
+      }
+     
+      #btn-back-to-top:hover {
+        background-color: #333;
+      }
+    </style>
   </head>
 
   <body>
@@ -33,7 +53,7 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83">
+      <nav class="navbar navbar-expand-lg navbar-light py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83"id="pagetop">
         <div class="container"><a class="navbar-brand" href="/"><img src="{% static '/img/logo/main_logo.png' %}" height="35" alt="..." /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
@@ -139,6 +159,7 @@
             </div>
           </div>
         </div>
+        <a href="#pagetop" title="top"id="btn-back-to-top">TOP</a>
       </section>
     </main>
     <!-- ===============================================-->
@@ -166,7 +187,8 @@
   <!-- 자바스크립트 End -->
   </body>
 </html>
-{% comment %} <script>
+{% comment %} 
+<script>
 const signUpBtns = document.getElementById("signUp");
 const signInBtns = document.getElementById("signIn");
 const containers = document.querySelector(".container-login");
@@ -179,5 +201,5 @@ signInBtns.addEventListener("click", () => {
   console.log(containers)
   containers.classList.remove("right-panel-active");
 });
-
-</script> {% endcomment %}
+</script> 
+{% endcomment %}
