--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -27,22 +27,17 @@
     <!-- ===============================================-->
     <style>
       #btn-back-to-top {
-        bottom: 20px;
+        bottom: 10px;
         right: 30px;
         z-index: 9999;
         border: none;
         outline: none;
-        background-color: #555;
         color: white;
         cursor: pointer;
         padding: 15px;
         border-radius: 10px;
         display:scroll;
         position:fixed;
-      }
-     
-      #btn-back-to-top:hover {
-        background-color: #333;
       }
     </style>
   </head>
@@ -159,7 +154,7 @@
             </div>
           </div>
         </div>
-        <a href="#pagetop" title="top"id="btn-back-to-top">TOP</a>
+        <a href="#pagetop" title="top"id="btn-back-to-top"><img src="{% static 'img/icons/up-arrow.png' %}" width=40px /></a>
       </section>
     </main>
     <!-- ===============================================-->
