--- a/GoodPT/templates/presentation/feedback.html
+++ b/GoodPT/templates/presentation/feedback.html
@@ -103,7 +103,8 @@
 
     GPTconsole.appendChild(firstQuestion);
 
-
+    const audio = new Audio('http://localhost:8000/media/tmp/question.mp3');
+    audio.play()
 </script>
 
 {% endblock content %}
