--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -23,7 +23,7 @@
     }
   </style>
 
-  <section id="home" style="padding-top:4rem; padding-bottom:4rem;">
+  <section id="home">
     <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
     </div>
     <!--/.bg-holder-->
@@ -41,7 +41,7 @@
 
   <!-- ============================================-->
   <!-- <section> begin ============================-->
-  <section class="pt-8">
+  <section>
 
     <div class="container">
       <div class="row">
@@ -83,7 +83,7 @@
   
   <!-- ============================================-->
   <!-- <section> begin ============================-->
-  <section class="pt-8 bg-soft-primary">
+  <section class="bg-soft-primary">
 
     <div class="container">
       <div class="row">
@@ -142,9 +142,9 @@
 
   <!-- ============================================-->
   <!-- <section> begin ============================-->
-  <section class="pt-6" id="pricingTable" style="padding-bottom: 4rem;">
+  <section>
 
-    <div class="container">
+    <div class="container" id="pricingTable">
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
           <h2>Membership Guide</h2>
@@ -237,12 +237,11 @@
   <!-- ============================================-->
 
 
-  <section class="py-8" id="team">
-    <div class="bg-holder" style="background-image:url({% static '/img/gallery/testimonial-bg.png' %});background-position:center;background-size:cover;">
-    </div>
+  <section class="bg-soft-primary">
+
     <!--/.bg-holder-->
 
-    <div class="container">
+    <div class="container" id="team">
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
           <h2>Team Members</h2>
