--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -237,18 +237,19 @@
   <!-- ============================================-->
 
 
-  <section class="bg-soft-primary">
-
+  <section class="py-8">
+    <div class="bg-holder" style="background-image:url({% static '/img/gallery/testimonial-bg.png' %});background-position:center;background-size:cover; height:100%;">
+    </div>
     <!--/.bg-holder-->
 
-    <div class="container" id="team">
+    <div class="container">
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
           <h2>Team Members</h2>
           <p class="mb-5"> contributed to Good-PT </p>
         </div>
       </div>
-      <table align="center">
+      <table align="center" id="team">
         <tr align="center">
             <td width=300>
               <a href="https://github.com/ehdwo98" target = "_blank">
