--- a/GoodPT/templates/report/report.html
+++ b/GoodPT/templates/report/report.html
@@ -120,7 +120,7 @@
                             <tr align="center">
                                 <td width=550 style="padding-right: 20px;">
                                     <h6 style="font-size: 10pt; line-height:1.5;">
-                                        &quot;{{attitude_analysis}}&quot;
+                                        {{attitude_analysis}}
                                     </h6>
                                     
                                 </td>
@@ -155,7 +155,7 @@
                             <tr align="center">
                                 <td width=550 style="padding-right: 20px;">
                                     <h6 style="font-size: 10pt; line-height:1.5;">
-                                        &quot;{{voice_analysis}}&quot;
+                                        {{voice_analysis}}
                                     </h6>
                                     
                                 </td>
@@ -201,7 +201,7 @@
                             <tr align="center">
                                 <td width=850>
                                     <h6 style="font-size: 10pt; line-height:1.5;">
-                                        &quot;{{script_analysis}}&quot;
+                                        {{script_analysis}}
                                     </h6>
                                 </td>
                             </tr>
