signup modal edit

--- a/GoodPT/templates/accounts/login.html
+++ b/GoodPT/templates/accounts/login.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="modal agreement-popup" id="termsConditions" style="margin-top: 96px;">
-        <div class="modal-container with-accept">
+        <div class="modal-container with-accept" style="margin-top: 42px;">
             <div class="top">
                 <h4>이용약관 동의</h4>
                 <span class="close-btn pointer" onclick="toggleModal('termsConditions', false);">
