--- a/GoodPT/templates/board/question_form.html
+++ b/GoodPT/templates/board/question_form.html
@@ -3,24 +3,20 @@
 <div class="container"  id="question_form">
     <h5 class="my-3 border-bottom pb-2">[{{ category.description }}] 질문 등록</h5>
     <form method="post" class="post-form my-3" enctype="multipart/form-data">
-        {% csrf_token %} {% include "form_errors.html" %}
-        <div class="mb-3">
-            <label for="subject" class="form-label">제목</label>
-            <input
-                type="text"
-                class="form-control"
-                name="subject"
-                id="subject"
-                value="{{ form.subject.value|default_if_none:'' }}"
-            />
+        {% csrf_token %} 
+        {% include "form_errors.html" %}
+        <div class="form-group">
+            <label for="subject">제목</label>
+            <input type="text" class="form-control" name="subject" id="subject"
+                value="{{ form.subject.value|default_if_none:'' }}">
+        </div>
+        <div class="form-group">
+            <label for="content">내용</label>
+            <textarea class="form-control" name="content"
+                    id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
         <div class="mb-3">
-            <label for="content" class="form-label">내용</label>
-            <textarea class="form-control" name="content" id="content" rows=10 style="resize: none;">
-                {{ form.content.value|default_if_none:'' }}
-            </textarea>
-        </div>
-        <div class="mb-3">
+            <br/>
             <label for="content" class="form-label">파일</label>
             <br>
             <label for="image" id="imageLabel" class="custom-file-upload">
