--- a/GoodPT/templates/board/question_form.html
+++ b/GoodPT/templates/board/question_form.html
@@ -10,13 +10,12 @@
             <input type="text" class="form-control" name="subject" id="subject"
                 value="{{ form.subject.value|default_if_none:'' }}">
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-top:10px;">
             <label for="content">내용</label>
             <textarea class="form-control" name="content"
                     id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
-        <div class="mb-3">
-            <br/>
+        <div class="mb-3"style="margin-top:10px;">
             <label for="content" class="form-label">파일</label>
             <br>
             <label for="image" id="imageLabel" class="custom-file-upload">
