--- a/GoodPT/presentation/templates/feedback.html
+++ b/GoodPT/presentation/templates/feedback.html
@@ -103,6 +103,8 @@
 
     GPTconsole.appendChild(firstQuestion);
 
+    const audio = new Audio("http://localhost:8000/media/tmp/question.mp3")
+    audio.play();
 
 </script>
 
