fix: question_form

--- a/GoodPT/templates/board/question_form.html
+++ b/GoodPT/templates/board/question_form.html
@@ -16,10 +16,11 @@
                     id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
         <div class="mb-3"style="margin-top:10px;">
-            <label for="content" class="form-label">파일</label>
-            <br>
+            <div>
+                <label for="content" class="form-label">파일</label>
+            </div>
+            {% if form.image.value %}
             <label for="image" id="imageLabel" class="custom-file-upload">
-                {% if form.image.value %}
                     현재 선택된 이미지 : {{ form.image.value.name }}
                     <div>
                         <label>
@@ -30,11 +31,8 @@
                             <input type="radio" name="image_action" value="deleteImage" onclick="hideImageInput()"> 이미지 삭제
                         </label>
                     </div>
-                {% else %}
-                    현재 선택된 이미지 파일이 없습니다.
-                {% endif %}
             </label>
-            <br>
+            {% endif %}
             <input type="file" class="form-control" name="image" id="image" accept="image/png, image/jpeg" />
         </div>
         <button type="submit" class="btn btn-primary" style="background-color:#6671a4; border:#6671a4;">저장하기</button>
