--- a/GoodPT/templates/base.html
+++ b/GoodPT/templates/base.html
@@ -70,6 +70,8 @@
               <div class="col-sm-12 col-md-9 col-lg-10 p-2">
                   <div id="content" class="border-top border-secondary">
                       <div class="content_block p-2">
+                          {% if messages %}
+                          {% endif %}
                           {% block content %}
                           {% endblock %}
                       </div>
