--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -56,7 +56,7 @@
               <li class="nav-item px-2"><a class="nav-link" href="/">Home</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="/presentation">Presentation</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="{% url 'board:index' 'qna' %}">Board</a></li>
-              {% if request.resolver_match.app_name == 'presentation' or request.resolver_match.app_name == 'report' %}
+              {% if request.resolver_match.app_name == 'presentation' or request.resolver_match.app_name == 'report'  or request.resolver_match.app_name == 'login' %}
               {% else %}
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#pricingTable">Price</a></li>
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#team">Team</a></li>
