--- a/GoodPT/templates/accounts/login.html
+++ b/GoodPT/templates/accounts/login.html
@@ -28,8 +28,8 @@
                             <div class = "login_span">
                                 
                             </div>
-                            <input type="text" name="username" placeholder="이름">
-                            <input type="email" name="email" placeholder="이메일(선택)">
+                            <input type="text" name="username" placeholder="아이디">
+                            <input type="email" name="email" placeholder="이메일 (선택)">
                             <input type="password" name="password1" placeholder="비밀번호">
                             <input type="password" name="password2" placeholder="비밀번호 확인">
                             <button class="form_btn" name="register">회원가입</button>
@@ -47,7 +47,7 @@
                         </div>
                         <form action="" method="post">
                             {% csrf_token %}
-                            <input type="username" name="username" placeholder="이메일">
+                            <input type="username" name="username" placeholder="아이디">
                             <input type="password" name="password" placeholder="비밀번호">
                             <div class="social-links">
                                 <div>
@@ -69,14 +69,14 @@
                 <div class="overlay-left">
                     <h2 id="h">환영합니다!</h2>
                     <div class = "login_detail">
-                        <p>회원정보를 입력해주세요.</p>
+                        <p>회원정보를 입력해 주세요.</p>
                     </div>
                     <button id="signIn" class="overlay_btn">로그인</button>
                 </div>
                 <div class="overlay-right">
                     <h2 id="h"> Good-PT에서</h2>
                     <div class="login_detail">
-                        <p>여러분의 발표능력을 향상시켜보세요.</p>
+                        <p>여러분의 발표능력을 키워 보세요.</p>
                         
                     </div>
                     <button id="signUp" class="overlay_btn">회원가입</button> 
