--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -23,7 +23,7 @@
     }
   </style>
 
-  <section id="home">
+  <section id="home" style="margin-top: -100px;z-index: -1;">
     <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
     </div>
     <!--/.bg-holder-->
@@ -68,7 +68,7 @@
           <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/creativity.png' %}" width="30" alt="..." />
             <div class="flex-1">
               <h5> 창의력 </h5>
-              <p class="text-muted mb-4">발표력이 뛰어나면 아이디어를 명확하게 표현할 수 있습니다. 이는 창의력이 풍부한 아이디어를 다양한 사람들과 소통하고 확장하는데 도움이 됩니다. </p>
+              <p class="text-muted mb-4"> 향상된 발표력은 창의적 사고 능력도 키워줍니다. 창의적 사고를 통해서 여러 관점에서 문제를 바라보고 문제 해결 능력을 기를 수 있습니다. </p>
             </div>
           </div>
         </div>
@@ -256,23 +256,24 @@
                 <img class='profile-img' src="{% static '/img/gallery/ko.png' %}" width=150 height=150/>
               </a>
               <h6 class="mb-0 fs--1">고동재</h6>
-              <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
+              <h6 class="mb-0 fs--1">WEB / DB</h6>
+              <p class="my-3">&quot;장고를 통한 풀스택 개발과 AI를 연결하는 MLops를 경험할 수 있어 좋은 기회였습니다.&quot;</p>
             </td>
             <td width=300>
               <a href="https://github.com/finale22" target = "_blank">
                 <img class='profile-img' src="{% static '/img/gallery/seo.png' %}" width=150 height=150/>
               </a>
               <h6 class="mb-0 fs--1">서성원</h6>
-              <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
-              
+              <h6 class="mb-0 fs--1">AI</h6>
+              <p class="my-3">&quot;조원 모두 각자의 역할을 최선을 다해 수행하여 빅프로젝트를 잘 마무리할 수 있었습니다. 조원들에게 감사합니다.&quot;</p>
             </td>
             <td width=300>
               <a href="https://github.com/shinshdd" target = "_blank">
                 <img class='profile-img' src="{% static '/img/gallery/shin.png' %}" width=150 height=150/>
               </a>
-              <h6 class="mb-0 fs--1">신상희</h6>
-              <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
-              
+              <h6 class="mb-0 fs--1">신상희 (WEB)</h6>
+              <h6 class="mb-0 fs--1">WEB / UX</h6>
+              <p class="my-3">&quot;프론트 경험을 쌓을 수 있어 좋았고, 좋은 팀원들을 만나서 프로젝트를 잘 진행할 수 있었습니다.&quot;</p>
             </td>
         </tr>
         <tr align = "center">
@@ -280,25 +281,25 @@
             <a href="https://github.com/SUNGWHANYOON" target = "_blank">
               <img class='profile-img' src="{% static '/img/gallery/yoon.png' %}" width=150 height=150/>
             </a>
-            <h6 class="mb-0 fs--1">윤성환</h6>
-            <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
-            
+            <h6 class="mb-0 fs--1">윤성환 (WEB)</h6>
+            <h6 class="mb-0 fs--1">WEB / DB / PM</h6>
+            <p class="my-3">&quot;처음 아이디어 기획할 때 구현 내용이 많아 걱정했었지만 잘 마무리할 수 있어 다행입니다.&quot;</p>
           </td>
           <td width=300>
             <a href="https://github.com/SuhyunRim118" target = "_blank">
               <img class='profile-img' src="{% static '/img/gallery/rim.png' %}" width=150 height=150/>
             </a>
             <h6 class="mb-0 fs--1">임수현</h6>
-            <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
-            
+            <h6 class="mb-0 fs--1">AI / WEB</h6>
+            <p class="my-3">&quot;협업에 대해서 제대로 배울 수 있었던 기회였습니다. 조원들과 함께 서비스 기획부터 개발까지 잘 마무리해서 뿌듯합니다.&quot;</p>
           </td>
           <td width=300>
             <a href="https://github.com/HaSangWan" target = "_blank">
               <img class='profile-img' src="{% static '/img/gallery/ha.png' %}" width=150 height=150/>
             </a>
             <h6 class="mb-0 fs--1">하상완</h6>
-            <p class="my-3">&quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;</p>
-            
+            <h6 class="mb-0 fs--1">AI</h6>
+            <p class="my-3">&quot;조원들과 같이 헤쳐나갔다는게 너무 뿌듯했습니다. AI 개발은 처음 해봤는데 많은 것을 배운 것 같습니다.&quot;</p>
           </td>
         </tr>
       </table>
