--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -143,7 +143,7 @@
           <hr />
           <div class="row flex-center pb-3">
             <div class="col-md-6 order-0">
-              <p class="text-200 text-center text-md-start">All rights Reserved &copy; KT AIVLE School AI 24, 2023</p>
+              <p class="text-200 text-center text-md-start">All rights Reserved &copy; KT AIVLE School AI Team 24, 2023</p>
             </div>
             <div class="col-md-6 order-1">
               <p class="text-200 text-center text-md-end"> Made with&nbsp;
