--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -23,12 +23,12 @@
     }
   </style>
 
-  <section id="home" style="margin-top: -100px;z-index: -1;">
+  <section id="home">
     <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
     </div>
     <!--/.bg-holder-->
 
-    <div class="container">
+    <div class="container" style="margin-top: -150px;">
       <div class="row align-items-center min-vh-50 min-vh-sm-75">
         <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/main.png' %}" alt="..." /></div>
         <div class="col-md-7 col-lg-6 text-md-start text-center">
